8074827: Resolve disabled warnings for libjavajpeg

Reviewed-by: serb, psadhukhan